--- a/index.html
+++ b/index.html
@@ -5,27 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="app.js"></script>
     <title>2048</title>
 </head>
 <body>
-    <div id="grid">
+    <div id="body-wrapper">
+        <div id="grid"></div>
+        <div id="left-pane">
+            <h1>2048</h1>
+            <span>Join the numbers and get to the 2048 tile!</span>
+            <div id="score-container">
+                <h2 title="score">score</h2>
+                <div id="score">0</div>
+            </div>
+            <div id="cpanel">
+                <button id="r">restart</button>
+            </div>
+        </div>
+        <div id="right-pane">
+            <h2>Leaderboard</h2>
+            <div class="list">
+                <table id="leaderboard">
 
-    </div>
-    <div id="left-pane">
-        <h1>2048</h1>
-        <span>Join the numbers and get to the 2048 tile!</span>
-        <div id="score-container">
-            <h2 title="score">score</h2>
-            <div id="score">0</div>
+                </table>
+            </div>
         </div>
     </div>
-    <div id="right-pane">
-        <h2>Leaderboard</h2>
-        <div class="list">
-            <ol>
-            </ol>
-        </div>
-    </div>
-    <script src="app.js"></script>
 </body>
 </html>
